--- a/commons.features.gradle
+++ b/commons.features.gradle
@@ -51,4 +51,5 @@ dependencies {
     implementation dependencies.coroutineCore
     implementation dependencies.gson
     implementation dependencies.coreKtx
+    implementation dependencies.javaInject
 }
