--- a/base/build.gradle
+++ b/base/build.gradle
@@ -2,6 +2,7 @@ plugins {
     alias(libs.plugins.android.library)
     alias(libs.plugins.kotlin.android)
     alias(libs.plugins.kotlin.kept)
+    alias(libs.plugins.hilt)
 }
 apply from: "$rootProject.projectDir/commons.gradle"
 def globalDependencies = rootProject.ext
